# aiswitch

./: .gitignore  README.md  main.py  pyproject.toml
aiswitch/: __init__.py  __main__.py  cli.py  config.py  env.py  preset.py  shell_integration.py  test_claude_agent_sdk.ipynb  textual_interactive.py  utils.py
aiswitch/cli_wrapper/: __init__.py  agent_wrapper.py  manager.py  process_session.py  stdio_controller.py  types.py
aiswitch/cli_wrapper/adapters/: __init__.py  base_adapter.py  generic_adapter.py
aiswitch/multi_agent/: __init__.py  manager.py  types.py
aiswitch/multi_agent/adapters/: __init__.py  base_adapter.py  claude_adapter.py
aiswitch/textual_ui/: __init__.py  app.py  commands.py  events.py  styles.tcss
aiswitch/textual_ui/components/: __init__.py  agent_selector.py  chat_display.py  input_panel.py  multi_agent_container.py  status_bar.py
docs/: MULTI_AGENT_USAGE.md  cli-wrapper-design.md  textual-design.md
docs/roadmap/: README.md  api-specification.md  implementation-phases.md  multi-agent-architecture.md
tests/: conftest.py  test_apply_flow.py  test_cli_commands.py  test_cli_wrapper.py  test_env_extended.py  test_main.py  test_preset_extended.py  test_shell_integration.py  test_utils.py
